service/tests/models/products/snapshots/attributes/can_create_attribute_successful@attributes.snap
---
source: tests/models/products/attributes.rs
assertion_line: 44
expression: result
---
Ok(
    Attribute {
        id: ID,
        pid: PID,
        name: "texture",
        description: Some(
            "The surface texture of the product.",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
