service/tests/models/products/snapshots/attributes/can_find_all_attributes@attributes.snap
---
source: tests/models/products/attributes.rs
expression: result
---
Ok(
    [
        Attribute {
            id: ID,
            pid: PID,
            name: "colour",
            description: Some(
                "The colour or finish used to distinguish product variants.",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Attribute {
            id: ID,
            pid: PID,
            name: "material",
            description: Some(
                "The primary material or composition of the product.",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
        Attribute {
            id: ID,
            pid: PID,
            name: "size",
            description: Some(
                "The labelled size used to distinguish product variants.",
            ),
            created_at: DATE,
            updated_at: DATE,
        },
    ],
)
