service/tests/models/products/snapshots/attributes/can_find_size_by_name@attributes.snap
---
source: tests/models/products/attributes.rs
expression: result
---
Ok(
    Attribute {
        id: 202,
        pid: 23d5df44-6acf-41a7-96fc-bf0160653102,
        name: "size",
        description: Some(
            "The labelled size used to distinguish product variants.",
        ),
        created_at: DATE,
        updated_at: DATE,
    },
)
