service/tests/models/products/snapshots/attributes/can_update_attribute_successful@attributes.snap
---
source: tests/models/products/attributes.rs
assertion_line: 80
expression: result
---
Ok(
    Attribute {
        id: ID,
        pid: PID,
        name: "texture",
        created_at: DATE,
        updated_at: DATE,
    },
)
