service/tests/models/products/snapshots/attributes/cannot_create_attribute_if_name_exists@attributes.snap
---
source: tests/models/products/attributes.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Product attribute with this name already exists.",
    ),
)
