service/tests/models/products/snapshots/attributes/cannot_create_attribute_if_name_is_empty@attributes.snap
---
source: tests/models/products/attributes.rs
expression: result
---
Err(
    InvalidInput(
        "Product attribute name cannot be empty.",
    ),
)
