service/tests/models/products/snapshots/attributes/cannot_find_attribute_if_name_not_exists@attributes.snap
---
source: tests/models/products/attributes.rs
assertion_line: 57
expression: result
---
Err(
    EntityNotFound,
)
